<resources>
    <string name="app_name">Awesome Calender</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    //For all
    <string name="no_internet">Could not load ,please check your ionternet connection  </string>
    <string name="update">Update</string>
    <!-- Stuff -->
    <string name="sign_in">Log In</string>
    <string name="register">Register</string>
    <string name="info_sign">Already have a account?</string>
    <string name="info_reg">First by us?</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="or">or</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="AccountSettings">AccountSettings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Settings">settings</string>
    <string name="Calender">Calender</string>
    <string name="Search">Search</string>
    <string name="MyChannels">My Channels</string>
    <string name="log_out">Log Out</string>
    <string name="loading">Loading...</string>
    <string name="Account">Account</string>
    <string name="CreateChannel">Create Channel</string>
    <string name="to_short_channel_error">You must write a Channel Name longer as 3 symbols! </string>
    <string name="back">back</string>
    <string name="Share">Share</string>
    <string name="channel_name" >name</string>
    <string name="channel_description" >description</string>
    //Settings
    <string name="Danger" />
    <string name="Customisation" />
    //CreateEvent
    <string name="select_time">Select Time</string>
    <string name="select_data">Select Data</string>
    <string name="create_event">Create Event</string>
    <string name="subscribe">Subscribe</string>


</resources>
