<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#303030"
    tools:context="com.example.calenderproject.fragments.StartFragment">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="0dp"
        android:layout_height="390dp"
        android:animateLayoutChanges="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/form_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="30dp"
            android:background="#303030"
            android:padding="0dp"
            android:visibility="visible"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:id="@+id/login_views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonToSignInFromStart"
                    style="@style/RoundedCornerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/round_button_style"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/sign_in"
                    tools:layout_editor_absoluteX="-136dp"
                    tools:layout_editor_absoluteY="564dp" />

                <EditText
                    android:id="@+id/editSignEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.51" />

                <EditText
                    android:id="@+id/editSignPassword"
                    style="@android:style/Widget.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="numberPassword"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editSignEmail" />

                <Button
                    android:id="@+id/buttonSignIn"
                    style="@style/RoundedCornerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/round_button_style"
                    android:text="@string/sign_in"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editSignPassword" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/form_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="100dp"
            android:background="#303030"
            android:padding="0dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:id="@+id/register_views"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonToRegFromStart"
                    style="@style/RoundedCornerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/round_button_style"
                    android:backgroundTint="#FF0000"
                    android:gravity="center"
                    android:text="@string/register" />

                <EditText
                    android:id="@+id/editNameReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/name"
                    android:inputType="textMultiLine"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/editEmailReg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editEmailReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editPasswordReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editEmailReg" />

                <Button
                    android:id="@+id/buttonRegister"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="@android:integer/config_longAnimTime"
                    android:background="@drawable/round_button_style"
                    android:backgroundTint="#FF0000"
                    android:text="@string/register"
                    android:textColor="#FFFFFF"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editPasswordReg" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/info_form"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="178dp"
            android:layout_marginEnd="128dp"
            android:layout_marginBottom="178dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <TextView
                android:id="@+id/textViewInfoStart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_vertical"
                android:text="@string/or"
                android:textAlignment="center"
                android:visibility="visible" />
        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>
